--- a/vite-app/index.html
+++ b/vite-app/index.html
@@ -9,13 +9,12 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
-    <div class="container py-4 px-3 mx-auto">
-    <script type="module" src="/src/main.jsx"></script>
+    <div class="container py-4 px-3 mx-auto"></div>
   </body>
+  <script type="module" src="/src/main.jsx"></script>
 </html>
